--- a/MarioTributeNow/index.html
+++ b/MarioTributeNow/index.html
@@ -2,8 +2,8 @@
 <html>
 
     <head>
-        <title>Mario Madness</title>
-       
+        <title>Mario Madness </title>
+       <link rel="stylesheet" type="text/css" href="mario.css">
     </head>
 
     <body>
