--- a/Mad Libs/mad.html
+++ b/Mad Libs/mad.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Mad Lib</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="mad.js"></script>
     <link rel="stylesheet" href="mad.css">
 </head>
+
 <body>
     
+        <form>
+            <fieldset>
+                <lable for='userInput1'>Animal:</lable>
+                <input type="text" id="userInput1">
+                <label for='userInput2'>Noun:</label>
+                <input type="text" id="userInput2">
+                <lable for='userInput3'>Place:</lable>
+                <input type="text" id="userInput3">
+                <lable for='userInput4'>Noun(Plural):</lable>
+                <input type="text" id="userInput4">
+                <lable for='userInput5'>Adjective:</lable>
+                <input type="text" id="userInput5">
+                <lable for='userInput6'>Body part:</lable>
+                <input type="text" id="userInput6">
+                <lable for='userInput7'>Noun:</lable>
+                <input type="text" id="userInput7">
+                <lable for='userInput8'>Noun:</lable>
+                <input type="text" id="userInput8">
+                <lable for='userInput9'>Verb ending in ED:</lable>
+                <input type="text" id="userInput9">
+                <lable for='userInput10'>Adjective:</lable>
+                <input type="text" id="userInput10">
+                <lable for='userInput11'>Noun:</lable>
+                <input type="text" id="userInput11">
+                <lable for='userInput12'>Verb ending in ED:</lable>
+                <input type="text" id="userInput12">
+                <lable for='userInput13'>Adverb:</lable>
+                <input type="text" id="userInput13">
+                <button type="button" id="button">Submit</button>
+            </fieldset>
+        </form>
+        <div id="output"></div>
+    <footer>
+        <h3>This story was gotten from "http://www.madtakes.com/libs/144.html" and for educational puropse.</h3>
+    </footer>
+
 </body>
+
 </html>
